# magit-helper

./: Main.hs  magit-helper.cabal
Control/: Magit.hs
