Name:                magit-helper
Version:             0.0.1
Synopsis:            A magit-helper application to setup up the "Magit" Emacs mode.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            System
Description:
  A magit-helper application to setup up the "Magit" Emacs mode.

Source-repository head
  type: git
  location: git://github.com/jwiegley/magit-helper.git

Library
    default-language:   Haskell98
    ghc-options: -Wall
    build-depends:
        base                 >= 3 && < 5
      , binary               >= 0.5.1.1
      , bytestring           >= 0.9.2.1
      , fast-logger          >= 2.1.5
      , old-locale           >= 1.0.0.5
      , thyme                >= 0.3.1.0
      , monad-control        >= 0.3.2.3
      , monad-logger         >= 0.3.4.0
      , text                 >= 0.11.3.1
      , transformers         >= 0.3.0.0
      , lifted-base          >= 0.2.2.0
      , vector-space         >= 0.8.6
      , pcre-light           >= 0.4
    exposed-modules:
        Control.Magit
    default-extensions: 
        BangPatterns
        FlexibleContexts
        OverloadedStrings

Executable magit-helper
    main-is: Main.hs
    ghc-options: -Wall

    build-depends: 
        base                 >= 4   && < 5
      , magit-helper
      , cmdargs              >= 0.9
      , HStringTemplate      >= 0.7.1
      , pretty               >= 1.1
      , filepath             >= 1.3
      , directory            >= 1.1
      , language-c           >= 0.4
      , logging              >= 1.3.0
      , containers           >= 0.4
      , split                >= 0.2
      , transformers         >= 0.2
      , temporary            >= 1.1.2.5
      , data-default         >= 0.5.3
      , text                 >= 0.11.3.1
      , thyme                >= 0.3.1.1
      , lens                 >= 4.1.2
      , logging              >= 1.3.0
      , optparse-applicative >= 0.8.0.1

test-suite test
    hs-source-dirs: test
    default-language: Haskell2010
    main-is: main.hs
    type: exitcode-stdio-1.0
    ghc-options: -Wall -threaded
    build-depends:
        base
      , magit-helper
      , unix                 >= 2.5.1.1
      , hspec                >= 1.4
      , monad-logger         >= 0.3.4.0
      , logging              >= 1.3.0
    default-extensions: 
        OverloadedStrings
